--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   shimmer: ^3.0.0
   get: ^4.7.2
   get_storage: ^2.1.1
+  fl_chart: ^1.0.0
+  share_plus: ^11.1.0
 
 dev_dependencies:
   flutter_test:
