--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,11 @@ dependencies:
   share_plus: ^11.1.0
   intl: ^0.20.2
   cached_network_image: ^3.4.1
+  geolocator: ^14.0.2
+  geocoding: ^4.0.0
+  flutter_map: ^8.2.1
+  latlong2: ^0.9.1
+  permission_handler: ^11.0.1
 
 dev_dependencies:
   flutter_test:
