--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,9 +27,11 @@ dependencies:
   cached_network_image: ^3.4.1
   geolocator: ^14.0.2
   geocoding: ^4.0.0
-  flutter_map: ^8.2.1
+  flutter_map: 7.0.2
   latlong2: ^0.9.1
   permission_handler: ^11.0.1
+  flutter_map_marker_cluster: ^1.4.0
+
 
 dev_dependencies:
   flutter_test:
